Fixed style issue on mobile
Removed border-radius for mobile view

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,7 @@ a {
 .inputForm {
   border: none;
   border-bottom: 2px solid #1d1d1d;
+  border-radius: 0;
   font-size: 1.2rem;
   padding: 5px;
   margin-right: 1rem;
